third_party/WebKit/Source/platform/graphics/UnacceleratedImageBufferSurface.cpp
@@ -31,6 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "platform/graphics/UnacceleratedImageBufferSurface.h"
 
+#include "platform/RuntimeEnabledFeatures.h"
 #include "platform/graphics/skia/SkiaUtils.h"
 #include "platform/wtf/PassRefPtr.h"
 #include "third_party/skia/include/core/SkSurface.h"
@@ -57,7 +58,12 @@ UnacceleratedImageBufferSurface::UnacceleratedImageBufferSurface(
 
   // Always save an initial frame, to support resetting the top level matrix
   // and clip.
-  canvas_ = WTF::WrapUnique(new SkiaPaintCanvas(surface_->getCanvas()));
+  canvas_ = WTF::WrapUnique(new SkiaPaintCanvas(
+      surface_->getCanvas(),
+      RuntimeEnabledFeatures::colorCorrectRenderingEnabled() &&
+              color_params.UsesOutputSpaceBlending()
+          ? color_params.GetSkColorSpace()
+          : nullptr));
   canvas_->save();
 
   if (initialization_mode == kInitializeImagePixels)
