third_party/WebKit/Source/platform/graphics/gpu/AcceleratedImageBufferSurface.cpp
@@ -31,6 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "platform/graphics/gpu/AcceleratedImageBufferSurface.h"
 
+#include "platform/RuntimeEnabledFeatures.h"
 #include "platform/graphics/gpu/SharedGpuContext.h"
 #include "platform/graphics/skia/SkiaUtils.h"
 #include "platform/wtf/PtrUtil.h"
@@ -63,7 +64,12 @@ AcceleratedImageBufferSurface::AcceleratedImageBufferSurface(
   if (!surface_)
     return;
 
-  canvas_ = WTF::WrapUnique(new SkiaPaintCanvas(surface_->getCanvas()));
+  canvas_ = WTF::WrapUnique(new SkiaPaintCanvas(
+      surface_->getCanvas(),
+      RuntimeEnabledFeatures::colorCorrectRenderingEnabled() &&
+              color_params.UsesOutputSpaceBlending()
+          ? color_params.GetSkColorSpace()
+          : nullptr));
   Clear();
 
   // Always save an initial frame, to support resetting the top level matrix
